bildformate und portrait angepasst (text)

--- a/public/index.html
+++ b/public/index.html
@@ -29,10 +29,12 @@
                 </ul>
             </nav>
             <h1>Curriculum Vitae <br><span style="color: var(--main-brand-color)">Joel Bühler</span></h1>
-            <p class="subheading">Wilkommen auf meiner CV Webseite, welche ich im Rahmen meines Studiums an der HFTM erarbeitet habe. <br><br> Mein Name ist Joel Bühler, ich komme aus Solothurn und bin ausgebildeter Informatik Systemtechniker EFZ und habe rund 9 Jahre Berufserfahrung. Aktuell arbeite ich bei der BDO AG als Head of ACC (Azure Competence Center).</p>
+            <p class="subheading">Willkommen auf meiner CV-Webseite. <br> <br>  
+            Mein Name ist Joel Bühler, geboren am 25.05.1998 und wohnhaft in Solothurn. <br> <br> 
+            Ich habe meine Lehre als Informatiker Systemtechniker EFZ 2018 abgeschlossen und habe rund 9 Jahre Berufserfahrung. Aktuell arbeite ich bei der BDO AG als Head of ACC (Azure Competence Center).</p>
         </div>
         <div class="circle">
-            <img src="bilder/1701434086747.png" alt="Mugshot">
+            <img src="bilder/1701434086747.webp" alt="Mugshot">
         </div>
     </header>
     <section id="knowhow_section">
@@ -140,7 +142,7 @@
                             <p class="language"><strong>Englisch:</strong> Sehr gut</p>
                             <p class="certification"><strong>Zertifizierung:</strong> First B2</p>
                         </div>
-                        <a href="bilder/SCR-20240703-svau.jpeg" target="_blank" class="certificate-button">Nachweis</a>
+                        <a href="bilder/SCR-20240703-svau.webp" target="_blank" class="certificate-button">Nachweis</a>
                     </div>
                 </div>
                 <div class="education_block">
@@ -224,9 +226,6 @@
                     Joel Bühler <br>
                     Beispielweg X <br>
                     4500 Solothurn <br>
-                    Geburtsdatum: 25.05.1998<br>
-                    <a href="mailto:buehler.joel@gmail.com">buehler.joel@gmail.com</a><br>
-                    <a href="https://www.linkedin.com/in/joel-bühler-7017631b4">Linkedin</a>
                 </p>
             </div>
             <div class="contact_form">
