--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="CSS/hobbies.css">
     <link rel="stylesheet" href="CSS/contact.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <noscript>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&display=swap">
+    </noscript>
     <title>CV JB HFTM</title>
 </head>
 <body>
