bild pfad angepasst

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
             Ich habe meine Lehre als Informatiker Systemtechniker EFZ 2018 abgeschlossen und habe rund 9 Jahre Berufserfahrung. Aktuell arbeite ich bei der BDO AG als Head of ACC (Azure Competence Center).</p>
         </div>
         <div class="circle">
-            <img src="bilder/1701434086747.webp" alt="Mugshot">
+            <img src="./bilder/1701434086747.webp" alt="Mugshot">
         </div>
     </header>
     <section id="knowhow_section">
