--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
             Ich habe meine Lehre als Informatiker Systemtechniker EFZ 2018 abgeschlossen und habe rund 9 Jahre Berufserfahrung. Aktuell arbeite ich bei der BDO AG als Head of ACC (Azure Competence Center).</p>
         </div>
         <div class="circle">
-            <img src="./bilder/1701434086747.webp" alt="Mugshot">
+            <img src="bilder/1701434086747.png" alt="Mugshot">
         </div>
     </header>
     <section id="knowhow_section">
@@ -144,7 +144,7 @@
                             <p class="language"><strong>Englisch:</strong> Sehr gut</p>
                             <p class="certification"><strong>Zertifizierung:</strong> First B2</p>
                         </div>
-                        <a href="bilder/SCR-20240703-svau.webp" target="_blank" class="certificate-button">Nachweis</a>
+                        <a href="bilder/SCR-20240703-svau.jpeg" target="_blank" class="certificate-button">Nachweis</a>
                     </div>
                 </div>
                 <div class="education_block">
