--- a/public/index.html
+++ b/public/index.html
@@ -151,7 +151,7 @@
                     <h3>Schulbildung</h3>
                     <div class="education_item">
                         <p class="period"><strong>2009 bis 2014:</strong></p>
-                        <p class="details">Sekundarstufe E an der Oz13 Subingen</p>
+                        <p class="details">Sekundarstufe E im Oz13 Subingen</p>
                     </div>
                     <div class="education_item">
                         <p class="period"><strong>2014 bis 2018:</strong></p>
@@ -193,7 +193,7 @@
             </div>
             <div>
                 <h4>2019 bis 2021</h4>
-                <h5>Junior System Engineer bei BDO</h5>
+                <h5>Junior System Engineer bei BDO AG</h5>
                 <ul>
                     <li>Betreiben und Administrieren von Backup-, Storage- und Firewallsystemen</li>
                     <li>Warten von Hardwaresystemen in einem Georedundanten RZ</li>
