--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
             <h1>Curriculum Vitae <br><span style="color: var(--main-brand-color)">Joel Bühler</span></h1>
             <p class="subheading">Willkommen auf meiner CV-Webseite. <br> <br>  
             Mein Name ist Joel Bühler, geboren am 25.05.1998 und wohnhaft in Solothurn. <br> <br> 
-            Ich habe meine Lehre als Informatiker Systemtechniker EFZ 2018 abgeschlossen und habe rund 9 Jahre Berufserfahrung. Aktuell arbeite ich bei der BDO AG als Head of ACC (Azure Competence Center).</p>
+            Ich habe meine Lehre als Informatiker Systemtechnik EFZ 2018 abgeschlossen und habe rund 9 Jahre Berufserfahrung. Aktuell arbeite ich bei der BDO AG als Head of ACC (Azure Competence Center).</p>
         </div>
         <div class="circle">
             <img src="bilder/1701434086747.png" alt="Mugshot">
